[project]
name = "drive_rag"
version = "0.1.0"
description = "drive-rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0"
]

[project.scripts]
drive_rag = "drive_rag.main:run"
run_crew = "drive_rag.main:run"
train = "drive_rag.main:train"
replay = "drive_rag.main:replay"
test = "drive_rag.main:test"
run_with_trigger = "drive_rag.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
